
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Consolidated resource getNodes processor, added access policy checks
- Added sanity check to toJSON function in modConnectorResponse
- Properly refactor element tree to point to correct processor
- Added delegate processors for different modes in element tree
- Updated Context policy attributes for missing attributes 
- Fixed invalid category reference on chunk update processor
- Added log error messages if save()/remove() fails on modElement derivatives
- [#MODX-771] Fixed invalid lexicon string reference in element tree
- Added WARN log message when executing a system event that doesn't exist
- Filled out missing access policy checks in element processors
- Fixed incorrect and missing permission check in snippet get/getList processors
- Fixed invalid lexicon reference in template processors
- Optimized templateTV getList processor to use only one query
- Optimized plugin event getList processor to use only one query
- [#MODX-194] Added sanity checks to element names
- [#MODX-792] Added check to prevent user from creating blank context, other sanity checks
- [#MODX-475] Prevented adding contexts with _ in name; will auto-strip
- [#MODX-796] Fixed check for valid passwords in setup
- Fixed problematic reference to $_lang
- Fixed improper log message reference in lexicon's reloadFromBase processor
- Additional access control defects and warning messages resolved for anonymous users.
- Fixed access control defect which prevented multiple policies from being respected per principal.
- Fixed issue with Policy Attributes not adding b/c id was not passed in
- Added 'save' event fire to Element/Resource formpanels
- Properly setup on*FormRender events for Element classes