@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed bug in Safari with TV widget properties rendering
 - Consolidated resource getNodes processor, added access policy checks
 - Added sanity check to toJSON function in modConnectorResponse
 - Properly refactor element tree to point to correct processor
